project/logs/20250618_155304log
Use Adapater:NVIDIA GeForce RTX 4060 Laptop GPU

FeatureLevel:12.2

Complete create D3D12Device!!!

Begin CompileShader,path:Object3D.VS.hlsl,profile:vs_6_0

In file included from Object3D.VS.hlsl:1:
./object3d.hlsli:5:5: error: unknown type name 'flaot32_t3'
    flaot32_t3 normal : NORMAL0;
    ^

